@@ -57,6 +57,9 @@ namespace gui
 		//! set a column width
 		virtual void setColumnWidth(u32 columnIndex, u32 width);
 
+		//! Get the width of a column
+		virtual u32 getColumnWidth(u32 columnIndex) const;
+
 		//! columns can be resized by drag 'n drop
 		virtual void setResizableColumns(bool resizable);
 
